--- a/sqs_basics_notes.tex
+++ b/sqs_basics_notes.tex
@@ -13,7 +13,7 @@ They can be implemented in many different ways, but the basic ideas remain the s
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics{shared_message_queue}
+  \includegraphics[width=0.75\linewidth]{shared_message_queue}
   \caption{Message queue components}
   \label{fig:message-queue-components}
 \end{figure}
